--- a/style.css
+++ b/style.css
@@ -1,5 +1,13 @@
-﻿.spacer {
+﻿a {
+	cursor: pointer;
+}
+
+.spacer {
 	margin-top: 20px;
+}
+
+.hSpacer {
+	margin-left: 20px;
 }
 
 .table-hover > tbody > tr:hover > td,
@@ -10,4 +18,24 @@
 
 .clickable {
 	cursor: pointer;
+}
+
+.colDe {
+	width: 20%;
+}
+
+.colA {
+	width: 15%;
+}
+
+.colObjet {
+	width: 45%;
+}
+
+.colDate {
+	width: 15%;
+}
+
+.surbrillanceRecherche {
+	background-color: #FFD42A;
 }
